welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:27: error: not found: value getLargeurMonde
    if((nb+1)%getLargeurMonde() == 0){ligne+=1}
              ^